fix(Graphics): module java.base does not "opens java.lang"
Tested on Java 16